Extend the gpuOperator feature flag to the public API (#363)
Instead of setting this based on the existence of a workload pool with a
GPU, push this logic to the client and allow them to make the decision
instead.
