# pkg/openapi/types.go
@@ -120,6 +120,12 @@ type KubernetesClusterAutoscaling struct {
 	MinimumReplicas int `json:"minimumReplicas"`
 }
 
+// KubernetesClusterFeatures Cluster feature flags.
+type KubernetesClusterFeatures struct {
+	// GpuOperator Enables the GPU operator.
+	GpuOperator bool `json:"gpuOperator"`
+}
+
 // KubernetesClusterNetwork A Kubernetes cluster network settings.
 type KubernetesClusterNetwork struct {
 	// DnsNameservers A list of DNS name server to use.
@@ -162,6 +168,9 @@ type KubernetesClusterSpec struct {
 	// ClusterManagerId The name of the cluster manager to use, if one is not specified
 	// the system will create one for you.
 	ClusterManagerId *string `json:"clusterManagerId,omitempty"`
+
+	// Features Cluster feature flags.
+	Features *KubernetesClusterFeatures `json:"features,omitempty"`
 
 	// Networking A Kubernetes cluster network settings.
 	Networking *KubernetesClusterNetwork `json:"networking,omitempty"`
